# ros2-assignments

./: README.md
assignment-1/: README.md
assignment-1/aditya_prime_composite/: package.xml  setup.cfg  setup.py
assignment-1/aditya_prime_composite/aditya_prime_composite/: random_number_publisher.py  random_number_subscriber.py
assignment-1/hriday_prime_composite/: CMakeLists.txt  package.xml
assignment-1/shriyansh_prime_composite/: package.xml  setup.cfg  setup.py
assignment-1/shriyansh_prime_composite/shriyansh_prime_composite/: prime_composite_classifier.py  random_number_publisher.py
assignment-1/vatsal_opencv_setup/: setup.cfg  setup.py
assignment-2/: README.md
assignment-2/Nikhil_opencv_setup/: CMakeLists.txt  package.xml
assignment-2/Nikhil_opencv_setup/src/: webcam_publisher.cpp  webcam_subscriber.cpp
assignment-2/aryan_opencv_setup/: package.xml  setup.cfg  setup.py
assignment-2/aryan_opencv_setup/aryan_opencv_setup/: webcam_publisher.py  webcam_subscriber.py
assignment-2/vatsal_opencv_setup/: package.xml
assignment-2/vatsal_opencv_setup/vatsal_opencv_setup/: webcam_publisher.py  webcam_subscriber.py
assignment-2/webcam/: CMakeLists.txt
assignment-3/: README.md
